--- a/scss/object/_component.scss
+++ b/scss/object/_component.scss
@@ -138,6 +138,7 @@
     font-family: $fontfamily-roboto-condensed;
     font-size: 29px;
     letter-spacing: .2em;
+    text-indent: .2em;
   }
   .c-visual-heading__jp {
     display: block;
@@ -146,6 +147,7 @@
     font-family: $fontfamily-roboto-condensed;
     font-size: 16px;
     letter-spacing: .3em;
+    text-indent: .3em;
     @include media(sp) {
       font-size: .16rem;
     }
