--- a/scss/object/_page.scss
+++ b/scss/object/_page.scss
@@ -5,10 +5,13 @@
     flex-flow: column wrap;
     justify-content: center;
     width: 100%;
-    height: 834px;
+    height: 100vh;
     overflow: hidden;
     @include media(st) {
       background: url(../images/index/hero_bg-sp.jpg) repeat center center / cover;
+    }
+    @include media(tp) {
+      height: 834px;
     }
     @include media(pc) {
       min-width: 1230px;
@@ -485,7 +488,6 @@
             .casestudy-slider__item {
               float: none;
               opacity: .4;
-              pointer-events: none;
               padding: 0 4.2vw;
               width: 84.6vw !important;
               transition: all .48s ease;
@@ -506,11 +508,23 @@
                 }
               }
               .text {
-                margin-top: 1em;
+                margin: 15px 0;
                 font-size: 15px;
-                line-height: 2;
                 @include media(sp) {
-                  font-size: .15rem;
+                  font-size: .2rem;
+                }
+                span {
+                  margin-right: 10px;
+                  padding: 5px 10px;
+                  border-radius: 10px;
+                  font-size: 13px;
+                  color: $color-red;
+                  background: #dbdbdb;
+                  @include media(sp) {
+                    font-size: .2rem;
+                    padding: .1rem .1rem;
+                    border-radius: 5px;
+                  }
                 }
               }
             }
@@ -530,7 +544,7 @@
             @include media(pc) {
               width: 42px;
               height: 42px;
-              top: 206px;
+              top: 227px;
             }
           }
           .bx-prev {
