--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -34,11 +34,15 @@
       padding: .6rem 0 !important;
     }
     @include media(st) {
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: center;
       position: absolute;
       top: 100%;
       left: 0;
       padding: 60px 0;
       width: 100%;
+      height: calc(100vh - .8rem);
       pointer-events: none;
       background-color: $color-red;
     }
@@ -48,11 +52,12 @@
     }
     .list {
       display: flex;
-      justify-content: space-between;
       @include media(st) {
+        justify-content: center;
         flex-flow: column wrap;
       }
       @include media(pc) {
+        justify-content: space-between;
         flex-flow: row wrap;
       }
       .item {
@@ -61,13 +66,6 @@
         }
         @include media(tb) {
           padding: 0 60px;
-        }
-        @include media(st) {
-          &:first-child {
-            a {
-              border-top: 1px solid $color-white;
-            }
-          }
         }
         @include media(pc) {
           &.is-active {
@@ -102,7 +100,6 @@
           }
           @include media(st) {
             padding: 30px 0;
-            border-bottom: 1px solid $color-white;
             color: $color-white;
           }
           @include media(pc) {
@@ -137,11 +134,8 @@
             margin-top: .6em;
             font-size: 13px;
             letter-spacing: .4em;
-            @include media(st) {
-              display: none;
-            }
-            @include media(st) {
-              font-size: 13px;
+            @include media(sp) {
+              font-size: .2rem;
             }
             //@media screen and (max-width: 1200px) and (min-width: 1025px) {
             //  font-size: 12px;
