--- a/scss/object/_page.scss
+++ b/scss/object/_page.scss
@@ -1811,7 +1811,8 @@
   }
   .map {
     max-width: 1230px;
-    margin: 0 auto;
+    padding: 160px 0;
+    margin: -180px auto;
     @include  media(sp) {
       width: 90%;
     }
@@ -1819,6 +1820,12 @@
       margin-bottom: 50px;
       @include media(sp) {
         margin-bottom: .5rem;
+      }
+    }
+    .map-block1 {
+      @include media(tb) {
+        width: 90%;
+        margin: 0 auto;
       }
     }
   }
@@ -1871,7 +1878,7 @@
         margin: 0 auto;
         text-align: center;
         padding-bottom: 60px;
-        @include media(sp) {
+        @include media(st) {
           width: 90%;
         }
         .heading {
