--- a/scss/object/_page.scss
+++ b/scss/object/_page.scss
@@ -1314,6 +1314,7 @@
   .project {
     max-width: 1230px;
     margin: 0 auto;
+    padding: 0 20px;
     @include media(st) {
       width: 90%;
     }
@@ -1409,11 +1410,10 @@
       }
     }
     .projectDetail_details {
-      max-width: 580px;
+      max-width: 300px;
       margin: 0 auto;
       border-top: 2px solid #dbdbdb;
       margin-top: 30px;
-      padding-top: 60px;
       .text {
         font-size: 14px;
         line-height: 2;
@@ -1850,6 +1850,9 @@
     .consul-topBlock {
       max-width: 1230px;
       margin: 0 auto;
+      @include media(tb) {
+        width: 96%;
+      }
       &.case1 {
         background: #fff;  
       }
@@ -2005,8 +2008,8 @@
     .consul-underBlock {
       max-width: 1230px;
       margin: 0 auto;
-      @include media(sp) {
-        width: 90%;
+      @include media(st) {
+        width: 96%;
       }
       .consul-underBlock__text {
         margin: 60px 0;
@@ -2045,6 +2048,9 @@
             line-height: 1.4;
             font-weight: bold;
             color: #fff;
+            @include media(tb) {
+              font-size: 1.4rem;
+            }
             @include media(sp) {
               font-size: .24rem;
             }
@@ -2055,6 +2061,9 @@
             font-size: 14px;
             font-weight: bold;
             line-height: 1.6;
+            @include media(tb) {
+              font-size: 1.1rem;
+            }
             @include media(sp) {
               font-size: .2rem;
               line-height: 1.6;
